# pinocchio-template

./: Cargo.toml  README.md
crates/e2e/: Cargo.toml
crates/e2e/src/: lib.rs  program_loader.rs
crates/e2e/tests/: test.rs
crates/program/: Cargo.toml
crates/program/src/: entrypoint.rs  lib.rs
crates/program/src/instructions/: mod.rs
crates/program/src/processor/: hello.rs  mod.rs  noop.rs
crates/program/src/state/: hello.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: lib.rs
