[package]
name = "program"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
no-entrypoint = []

[dependencies.pinocchio]
version = "0.8.4"
[dependencies.pinocchio-pubkey]
version = "0.2.4 "
[dependencies.pinocchio-system]
version = "0.2.3"
[dependencies.bytemuck]
version = "1"
features = ["derive", "min_const_generics"]