[package]
name = "sdk"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies.solana-sdk]
version = "2.2.1"
[dependencies.putils]
version = "0.0.5"
[dependencies.program]
path = "../program"
features = ["no-entrypoint"]
